--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   postgres: ^3.3.0
   flutter_dotenv: ^5.1.0
+  go_router: ^14.2.7
 
 dev_dependencies:
   flutter_test:
