--- a/.github/workflows/build_verification.yml
+++ b/.github/workflows/build_verification.yml
@@ -10,7 +10,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
-          java-version: '12.x'
+          java-version: '12'
 
       - uses: subosito/flutter-action@v2
         with:
@@ -30,7 +30,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
-          java-version: '12.x'
+          java-version: '12'
 
       - uses: subosito/flutter-action@v2
         with:
@@ -50,7 +50,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
-          java-version: '12.x'
+          java-version: '12'
 
       - uses: subosito/flutter-action@v2
         with:
@@ -70,7 +70,7 @@ jobs:
 
       - uses: actions/setup-java@v3
         with:
-          java-version: '12.x'
+          java-version: '12'
 
       - uses: subosito/flutter-action@v2
         with:
