--- a/.github/workflows/build_verification.yml
+++ b/.github/workflows/build_verification.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Run Flutter Format
         run: |
           flutter pub get
-          flutter format --set-exit-if-changed .
+          dart format --set-exit-if-changed .
 
   analyze:
     runs-on: ubuntu-latest
