--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   phosphor_flutter: ^2.1.0
   fl_chart: ^0.68.0
   firebase_auth: ^4.16.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
