add: flutter secure storage

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   crypto: ^3.0.5
   flutter_bloc: ^8.1.6
   provider: ^6.1.2
+  flutter_secure_storage: ^9.2.2
 
 dev_dependencies:
   flutter_test:
